automatically backed up by learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -3,4 +3,4 @@ Classroom Info
 <% binding.pry %>
 
 We now want to call out the oldest student in the class:
-<%= render partial: 'students/student', locals: {student: @student}%>
+<!-- <%= render partial: 'students/student', locals: {student: @student}%> -->
