automatically backed up by learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -2,5 +2,8 @@ Classroom Info
 <%= render partial: 'classroom', locals: {classroom: @classroom} %>
 <% binding.pry %>
 
+<% @classroom.student do |classroom| %>
+    
+<% end %>
 We now want to call out the oldest student in the class:
 <!-- <%= render partial: 'students/student', locals: {student: @student}%> -->
