automatically backed up by learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -3,9 +3,9 @@ Classroom Info
 <!-- <% binding.pry %> -->
 
 <% @classroom.students do |student| %>
-    <%= render partial: 'students/student', locals: {student: student} %>
+    <%= render partial: 'students/student', locals: {student: @student} %>
     <% binding.pry %>
 <% end %>
 
 We now want to call out the oldest student in the class:
-<%= render partial: 'students/student', locals: {oldest_student: @student.oldest_student}%>
+<%= render partial: 'students/student', locals: {oldest_student: @student.oldest_student} %>
