automatically backed up by learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -8,4 +8,4 @@ Classroom Info
 <% end %> -->
 
 We now want to call out the oldest student in the class:
-<%= render partial: 'students/student', locals: {oldest_student: @student.oldest_student} %>
+<%= render partial: 'students/student', locals: {oldest_student: @sclassroom.oldest_student} %>
