automatically backed up by learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -2,10 +2,10 @@ Classroom Info
 <%= render partial: 'classroom', locals: {classroom: @classroom} %>
 <!-- <% binding.pry %> -->
 
-<!-- <% @classroom.students do |student| %>
+<% @classroom.students do |student| %>
     <%= render partial: 'students/student', locals: {student: @student} %>
     <% binding.pry %>
-<% end %> -->
+<% end %>
 
 We now want to call out the oldest student in the class:
 <%= render partial: 'students/student', locals: {oldest_student: @classroom.oldest_student} %>
