automatically backed up by learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -4,7 +4,7 @@ Classroom Info
 
 <% @classroom.students.each do |student| %>
 <% binding.pry %>
-    <%= render partial: 'students/student', locals: {student: @student} %>
+    <%= render partial: 'students/student', locals: {student: student} %>
     <% end %>
 
 We now want to call out the oldest student in the class:
