automatically backed up by learn

--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -7,4 +7,4 @@ Classroom Info
     <% end %>
 
 We now want to call out the oldest student in the class:
-<%= render partial: 'students/student', locals: {oldest_student: @classroom.oldest_student} %>
+<%= render partial: 'students/student', locals: {student: @classroom.oldest_student} %>
