automatically backed up by learn

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,1 +1,5 @@
-<% binding.pry %>
+
+<% binding.pry %> 
+<% @students.each do |student| %>
+    <%= render partial: 'students/student', locals: {student: student} %>
+<% end %>
