automatically backed up by learn

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,4 +1,4 @@
 
 <% @students.each do |student| %>
-    <%= render partial: 'students/student', locals: {student: student} %>
+    <%= render partial: 'student', locals: {student: student} %>
 <% end %>
