--- a/app/views/classrooms/show.html.erb
+++ b/app/views/classrooms/show.html.erb
@@ -1,5 +1,10 @@
 Classroom Info
 <%= render partial: 'classroom', locals: {classroom: @classroom} %>
+<!-- <% binding.pry %> -->
+
+<% @classroom.students.each do |student| %>
+    <%= render partial: 'students/student', locals: {student: student} %>
+<% end %>
 
 We now want to call out the oldest student in the class:
-<%= render partial: 'students/student', locals: {student: @student}%>
+<%= render partial: 'students/student', locals: {student: @classroom.oldest_student} %>
